[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opengraphify"
version = "0.1.0"
description = "Background graph updater for graphify using local/cheap LLM backends"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "networkx>=3.4",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
clustering = ["graspologic"]

[project.scripts]
opengraphify = "opengraphify.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["opengraphify*"]
